--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -41,7 +41,8 @@
 
                                   <div class="form-group">
                                     <textarea rows="8" name="description" class="form-control rounded-0" placeholder="Photo Description"
-                                              required><%= photo.description %></textarea>
+                                              required><%= photo.description %>
+                                            </textarea>
                                   </div>
 
                                   <div class="form-group mb-0">
