--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,19 +48,22 @@
                     <div class="row tm-catalog-item-list">
                         <% for (let i=0; i < photos.length; i++) { %>
    
-                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
+                          <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
+
                             <div class="position-relative tm-thumbnail-container">
-                                <img src="img/tn-01.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
+                                <img src="<%= photos[i].image %>" alt="Image" class="img-fluid tm-catalog-item-img">    
                                 <a href="/photos/<%=photos[i]._id%>" class="position-absolute tm-img-overlay">
                                     <i class="fas fa-play tm-overlay-icon"></i>
                                 </a>
-                            </div>    
+                            </div>
+                               
                             <div class="p-4 tm-bg-gray tm-catalog-item-description">
                                 <h3 class="tm-text-primary mb-3 tm-catalog-item-title"><%=photos[i].title%></h3>
                                 <p class="tm-catalog-item-text"><%=photos[i].description %><span class="tm-text-secondary">do not need</span> any JS. 
                                     They are just separated HTML pages. Paging is at the bottom to extend the list as long as you want. 
                                     This can be a large catalog.</p>
                             </div>
+                            
                         </div>
 
                         <% } %> 
@@ -69,14 +72,20 @@
 
                     <!-- Catalog Paging Buttons -->
                     <div>
-                        <ul class="nav tm-paging-links">
-                            <li class="nav-item active"><a href="#" class="nav-link tm-paging-link">1</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link tm-paging-link">2</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link tm-paging-link">3</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link tm-paging-link">4</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link tm-paging-link">></a></li>
-                        </ul>
-                    </div>
+                        <% if (pages > 0) { %>
+                          <ul class="nav tm-paging-links">
+                            <% for (i=1; i <=pages; i++) { %>
+                              <%   if (i == current) { %>
+                                <li class="nav-item active"><a href="/?page=<%= i %>" class="nav-link tm-paging-link"><%= i %></a></li>
+                              <% } else if (i < pages) { %>
+                                <li class="nav-item"><a href="/?page=<%= i %>" class="nav-link tm-paging-link"><%= i %></a></li>
+                              <%  } else { %>
+                                <li class="nav-item"><a href="/?page=<%= i %>" class="nav-link tm-paging-link">></a></li>
+                              <%  } %>
+                            <%  } %>
+                          </ul>
+                        <% } %>
+                       </div>
                 </main>
                 <%- include('partials/_footer')-%>
                 <body>                
