--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,8 @@
           
             <div class="tm-welcome-container text-center text-white">
                 <div class="tm-welcome-container-inner">
-                    <p class="tm-welcome-text mb-1 text-white">Video Catalog is brought to you by TemplateMo.</p>
-                    <p class="tm-welcome-text mb-5 text-white">This is a full-width video banner.</p>
+                    <p class="tm-welcome-text mb-1 text-white"></p>
+                    <p class="tm-welcome-text mb-5 text-white"></p>
                     <a href="#content" class="btn tm-btn-animate tm-btn-cta tm-icon-down">
                         <span>Discover</span>
                     </a>
@@ -17,10 +17,7 @@
             </div>
 
             <div id="tm-video-container">
-                <video autoplay muted loop id="tm-video">
-                    <!-- <source src="video/sunset-timelapse-video.mp4" type="video/mp4"> -->
-                        <source src="video/wheat-field.mp4" type="video/mp4">
-                </video>    
+                <img src="img/world.jpg">
             </div>
             
             <i id="tm-video-control-button" class="fas fa-pause"></i>
